<resources>
    <string name="app_name">PRG208_Android_Programming_Exam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_results_found_for_this_query">No results found for this query</string>
    <string name="cover">cover</string>
    <string name="saved_image_gallery">Saved Image Gallery</string>
    <string name="reverse_image_gallery">Reverse Image Search</string>
    <string name="select_upload_image">Select/Upload Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="click_on_one_of_the_pictures">click on one of the pictures</string>
    <string name="reversed_image_search">Reversed image search</string>
</resources>