<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reversed_image_search"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFragment1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="changeFragment"
                android:textColor="@color/purple_200"
                android:tag="1"
                android:text="@string/select_upload_image" />


            <Button
                android:id="@+id/btnFragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="changeFragment"
                android:tag="2"
                android:textColor="@color/purple_200"
                android:text="@string/reverse_image_gallery" />

            <Button
                android:id="@+id/btnFragment3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="changeFragment"
                android:textColor="@color/purple_200"
                android:tag="3"
                android:text="@string/saved_image_gallery" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>