<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".fragment_1.FragmentOne">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/camera"
            android:textColor="@color/purple_200"
            android:layout_weight="1"
            android:id="@+id/Camera"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/gallery"
            android:id="@+id/Gallery"
            android:textColor="@color/purple_200"
            android:layout_weight="1"
            android:onClick="submit"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/upload"
            android:layout_weight="1"
            android:textColor="@color/purple_200"
            android:id="@+id/upload"
            android:onClick="submit"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image"
        android:background="@drawable/ic_launcher_foreground"
        />


</LinearLayout>